--- a/Cookingspiration/app/src/main/res/layout/activity_main.xml
+++ b/Cookingspiration/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,152 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="24dp"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/date"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Date"
+        android:textColor="@color/black"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        tools:ignore="MissingConstraints" />
+
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/mondaycard"
+        android:clickable="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/primary_100"
+        android:layout_marginTop="24dp"
+        card_view:layout_constraintTop_toBottomOf="@+id/date"
+        card_view:cardCornerRadius="5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Monday, date"
+            android:layout_margin="12dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/poppins_medium"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/tuesdaycard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/primary_100"
+        android:layout_marginTop="12dp"
+        card_view:layout_constraintTop_toBottomOf="@+id/mondaycard"
+        card_view:cardCornerRadius="5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tuesday, date"
+            android:layout_margin="12dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/poppins_medium"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/wednesdaycard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/primary_100"
+        android:layout_marginTop="12dp"
+        card_view:layout_constraintTop_toBottomOf="@+id/tuesdaycard"
+        card_view:cardCornerRadius="5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Wednesday, date"
+            android:layout_margin="12dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/poppins_medium"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/thursdaycard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/primary_100"
+        android:layout_marginTop="12dp"
+        card_view:layout_constraintTop_toBottomOf="@+id/wednesdaycard"
+        card_view:cardCornerRadius="5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Thursday, date"
+            android:layout_margin="12dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/poppins_medium"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/fridaycard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/primary_100"
+        android:layout_marginTop="12dp"
+        card_view:layout_constraintTop_toBottomOf="@+id/thursdaycard"
+        card_view:cardCornerRadius="5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Friday, date"
+            android:layout_margin="12dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/poppins_medium"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/saturdaycard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/primary_100"
+        android:layout_marginTop="12dp"
+        card_view:layout_constraintTop_toBottomOf="@+id/fridaycard"
+        card_view:cardCornerRadius="5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Saturday, date"
+            android:layout_margin="12dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/poppins_medium"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/sundaycard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/primary_100"
+        android:layout_marginTop="12dp"
+        card_view:layout_constraintTop_toBottomOf="@+id/saturdaycard"
+        card_view:cardCornerRadius="5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sunday, date"
+            android:layout_margin="12dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/poppins_medium"/>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
