--- a/Cookingspiration/app/src/main/res/layout/activity_main.xml
+++ b/Cookingspiration/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semibold"
-        android:text="Date"
-        android:textColor="@color/black"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="24sp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="24dp"
+        tools:layout_editor_absoluteY="24dp" />
 
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/mondaycard"
+        android:id="@+id/firstcard"
         android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,9 +31,9 @@
         card_view:cardCornerRadius="5dp">
 
         <TextView
+            android:id="@+id/firstdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Monday, date"
             android:layout_margin="12dp"
             android:textSize="16sp"
             android:fontFamily="@font/poppins_medium"/>
@@ -40,18 +41,18 @@
 
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/tuesdaycard"
+        android:id="@+id/secondcard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/primary_100"
         android:layout_marginTop="12dp"
-        card_view:layout_constraintTop_toBottomOf="@+id/mondaycard"
+        card_view:layout_constraintTop_toBottomOf="@+id/firstcard"
         card_view:cardCornerRadius="5dp">
 
         <TextView
+            android:id="@+id/seconddate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tuesday, date"
             android:layout_margin="12dp"
             android:textSize="16sp"
             android:fontFamily="@font/poppins_medium"/>
@@ -59,18 +60,18 @@
 
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/wednesdaycard"
+        android:id="@+id/thirdcard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/primary_100"
         android:layout_marginTop="12dp"
-        card_view:layout_constraintTop_toBottomOf="@+id/tuesdaycard"
+        card_view:layout_constraintTop_toBottomOf="@+id/secondcard"
         card_view:cardCornerRadius="5dp">
 
         <TextView
+            android:id="@+id/thirddate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Wednesday, date"
             android:layout_margin="12dp"
             android:textSize="16sp"
             android:fontFamily="@font/poppins_medium"/>
@@ -78,18 +79,18 @@
 
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/thursdaycard"
+        android:id="@+id/fourthcard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/primary_100"
         android:layout_marginTop="12dp"
-        card_view:layout_constraintTop_toBottomOf="@+id/wednesdaycard"
+        card_view:layout_constraintTop_toBottomOf="@+id/thirdcard"
         card_view:cardCornerRadius="5dp">
 
         <TextView
+            android:id="@+id/fourthdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Thursday, date"
             android:layout_margin="12dp"
             android:textSize="16sp"
             android:fontFamily="@font/poppins_medium"/>
@@ -97,18 +98,18 @@
 
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/fridaycard"
+        android:id="@+id/fifthcard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/primary_100"
         android:layout_marginTop="12dp"
-        card_view:layout_constraintTop_toBottomOf="@+id/thursdaycard"
+        card_view:layout_constraintTop_toBottomOf="@+id/fourthcard"
         card_view:cardCornerRadius="5dp">
 
         <TextView
+            android:id="@+id/fifthdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Friday, date"
             android:layout_margin="12dp"
             android:textSize="16sp"
             android:fontFamily="@font/poppins_medium"/>
@@ -116,18 +117,18 @@
 
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/saturdaycard"
+        android:id="@+id/sixthcard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/primary_100"
         android:layout_marginTop="12dp"
-        card_view:layout_constraintTop_toBottomOf="@+id/fridaycard"
+        card_view:layout_constraintTop_toBottomOf="@+id/fifthcard"
         card_view:cardCornerRadius="5dp">
 
         <TextView
+            android:id="@+id/sixthdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Saturday, date"
             android:layout_margin="12dp"
             android:textSize="16sp"
             android:fontFamily="@font/poppins_medium"/>
@@ -135,18 +136,18 @@
 
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/sundaycard"
+        android:id="@+id/seventhcard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/primary_100"
         android:layout_marginTop="12dp"
-        card_view:layout_constraintTop_toBottomOf="@+id/saturdaycard"
+        card_view:layout_constraintTop_toBottomOf="@+id/sixthcard"
         card_view:cardCornerRadius="5dp">
 
         <TextView
+            android:id="@+id/seventhdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sunday, date"
             android:layout_margin="12dp"
             android:textSize="16sp"
             android:fontFamily="@font/poppins_medium"/>
