--- a/Cookingspiration/app/src/main/res/layout/activity_seventh.xml
+++ b/Cookingspiration/app/src/main/res/layout/activity_seventh.xml
@@ -57,15 +57,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Breakfast"
-                            android:textColor="@color/black"
-                            android:textSize="20sp"
+                            android:textColor="@color/primary_700"
+                            android:textSize="18sp"
                             android:textStyle="bold"
-                            android:fontFamily="@font/poppins_semibold"/>
-
-                        <ImageView
-                            android:id="@+id/imagebreakfast"
-                            android:layout_width="301dp"
-                            android:layout_height="150dp"/>
+                            android:fontFamily="@font/poppins"/>
 
                         <TextView
                             android:id="@+id/namebreakfast"
@@ -75,7 +70,7 @@
                             android:textAlignment="center"
                             android:textSize="20sp"
                             android:textStyle="bold"
-                            android:fontFamily="@font/poppins_medium"/>
+                            android:fontFamily="@font/poppins_semibold"/>
 
                         <TextView
                             android:id="@+id/sourcebreakfast"
@@ -115,25 +110,20 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Lunch"
-                            android:textColor="@color/black"
-                            android:textSize="20sp"
+                            android:textColor="@color/primary_700"
+                            android:textSize="18sp"
                             android:textStyle="bold"
-                            android:fontFamily="@font/poppins_semibold"/>
-
-                        <ImageView
-                            android:id="@+id/imagelunch"
-                            android:layout_width="301dp"
-                            android:layout_height="150dp"/>
+                            android:fontFamily="@font/poppins"/>
 
                         <TextView
                             android:id="@+id/namelunch"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_medium"
                             android:textColor="@color/black"
                             android:textAlignment="center"
                             android:textSize="20sp"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:fontFamily="@font/poppins_semibold"/>
 
                         <TextView
                             android:id="@+id/sourcelunch"
@@ -172,35 +162,31 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins"
                             android:text="Dinner"
-                            android:textColor="@color/black"
-                            android:textSize="20sp"
-                            android:textStyle="bold"
-                            android:fontFamily="@font/poppins_semibold"/>
+                            android:textColor="@color/primary_700"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
 
-                        <ImageView
-                            android:id="@+id/imagedinner"
-                            android:layout_width="301dp"
-                            android:layout_height="150dp"/>
 
                         <TextView
                             android:id="@+id/namedinner"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/black"
+                            android:fontFamily="@font/poppins_semibold"
                             android:textAlignment="center"
+                            android:textColor="@color/black"
                             android:textSize="20sp"
-                            android:textStyle="bold"
-                            android:fontFamily="@font/poppins_medium"/>
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/sourcedinner"
-                            android:autoLink="web"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/black"
+                            android:autoLink="web"
+                            android:fontFamily="@font/poppins"
                             android:textAlignment="center"
-                            android:fontFamily="@font/poppins"/>
+                            android:textColor="@color/black" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -313,4 +299,5 @@
         </LinearLayout>
 
     </ScrollView>
+
 </LinearLayout>
