--- a/Cookingspiration/app/src/main/res/layout/activity_sixth.xml
+++ b/Cookingspiration/app/src/main/res/layout/activity_sixth.xml
@@ -57,15 +57,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Breakfast"
-                            android:textColor="@color/black"
-                            android:textSize="20sp"
+                            android:textColor="@color/primary_700"
+                            android:textSize="18sp"
                             android:textStyle="bold"
                             android:fontFamily="@font/poppins_semibold"/>
-
-                        <ImageView
-                            android:id="@+id/imagebreakfast"
-                            android:layout_width="301dp"
-                            android:layout_height="150dp"/>
 
                         <TextView
                             android:id="@+id/namebreakfast"
@@ -115,15 +110,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Lunch"
-                            android:textColor="@color/black"
-                            android:textSize="20sp"
+                            android:textColor="@color/primary_700"
+                            android:textSize="18sp"
                             android:textStyle="bold"
                             android:fontFamily="@font/poppins_semibold"/>
-
-                        <ImageView
-                            android:id="@+id/imagelunch"
-                            android:layout_width="301dp"
-                            android:layout_height="150dp"/>
 
                         <TextView
                             android:id="@+id/namelunch"
@@ -173,15 +163,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Dinner"
-                            android:textColor="@color/black"
-                            android:textSize="20sp"
+                            android:textColor="@color/primary_700"
+                            android:textSize="18sp"
                             android:textStyle="bold"
                             android:fontFamily="@font/poppins_semibold"/>
-
-                        <ImageView
-                            android:id="@+id/imagedinner"
-                            android:layout_width="301dp"
-                            android:layout_height="150dp"/>
 
                         <TextView
                             android:id="@+id/namedinner"
