--- a/Cookingspiration/app/src/main/res/values/colors.xml
+++ b/Cookingspiration/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_700">#1844A5</color>
     <color name="primary_500">#3077E6</color>
     <color name="primary_100">#D5EBFD</color>
     <color name="accents_200">#9BECFE</color>
